Categories list: select one category or all if there is not name argument (#33)
